[TH2-4566] Add vulnerabilities scanning

--- a/build.gradle
+++ b/build.gradle
@@ -203,3 +203,9 @@ clean {
 javadoc {
     options.addStringOption('Xdoclint:none', '-quiet')
 }
+
+configurations {
+    compileClasspath {
+        resolutionStrategy.activateDependencyLocking()
+    }
+}
